--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- <div id="app" class="container"></div> -->
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
 </body>
